@@ -10,6 +10,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature
       from the server's node list
   e - local client connections use a unix domain socket, bypassing inet and pbs_iff
   f - Linux 2.6 cpuset support  (in development)
+  e - new job array submission syntax
 
 2.2.1
   b - fix a bug where dependent jobs get put on hold when the previous job has
